Formulario alumnos tow way binding

--- a/src/app/formulario-alumnos/formulario-alumnos.component.html
+++ b/src/app/formulario-alumnos/formulario-alumnos.component.html
@@ -7,6 +7,7 @@
 
 <input type="button" value="Introducir alumno" (click)="introducirEmpleado()">
 
+<h2>Listado de alumnos:</h2>
 
 <div *ngFor="let iterador of alumnos; let i=index">
   <p>Alumno {{i+1}}</p>
